fix: fix bottom menu space on mobile

--- a/src/main/resources/assets/styles/foundation/_content.scss
+++ b/src/main/resources/assets/styles/foundation/_content.scss
@@ -274,6 +274,10 @@ html body {
     overflow-x: hidden;
   }
 
+  .main-wrapper {
+    padding: 0 0 240px;
+  }
+
   main {
     & > .content-holder {
       & > .content {
